<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Investment Calculator"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/title_color"
            android:shadowColor="@color/black"
            android:shadowRadius="1"></TextView>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="75dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:text="@string/premium_paid_label"
            android:textAlignment="center"
            android:id="@+id/paid_label"
            android:textSize="14sp">
        </TextView>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/paid_duration_btn"
            android:orientation="horizontal"
            android:weightSum="2">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/premium_paid_duration_monthly_label"
                android:textSize="14sp"
                android:checked="false"
                android:id="@+id/paid_duration_monthly_btn"
                android:layout_weight="1">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/premium_paid_duration_yearly_label"
                android:textSize="14sp"
                android:checked="true"
                android:id="@+id/paid_duration_yearly_btn"
                android:layout_weight="1">
            </RadioButton>
        </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/amount_txt"
                android:inputType="number"
                android:hint="@string/premium_amount_label"
                android:textSize="14sp"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/noofyears_txt"
                android:inputType="number"
                android:digits="0123456789"
                android:hint="@string/premium_no_of_year_label"
                android:textSize="14sp"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:id="@+id/noofyears_pay_txt"
                android:hint="@string/premium_no_of_year_pay_label"
                android:digits="0123456789"
                android:textSize="14sp"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Enter Interest Rate"
                android:inputType="number"
                android:textSize="14sp"
                android:id="@+id/interest_rate_text"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/button_text_calculate"
                android:gravity="center"
                android:textSize="14sp"
                android:id="@+id/calculate_btn"
                android:textColor="@color/teal_200"
                android:textAlignment="center"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>